--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,22 +1,72 @@
 
-  .video_list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-  }
+.container{
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  background-color:  #EEF7FF ;
+}
+
+.container h1 {
+  text-align: center; 
+  margin: 20px;
+}
+
+
+
+.videoItem {  
   
-  .video_item {
-    background: #f1f1f1;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 10px;
-    padding: 10px;
-    width: 300px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
+  display: flex;
+  align-items: center;
+  flex-direction: column; 
+  background: #CDE8E5;
   
-  .video-item h3 {
-    margin: 0 0 10px;
-  }
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 20px ;
+ 
+}
+
+.videoItem h3 { 
+  width: 100%;
+  font-size: 1.5rem;
+  color: black;
+  /* background-color: #333; */
+  margin-bottom: 15px;
+  word-break: break-all;   
+
   
+
+}
+
+.videoItem video {
+  display: block;
+  margin-bottom: 15px;
+  border-radius: 8px; 
+
+}
+
+.videoItem button {
+  display: block;
+  /* width: 50%; */
+  padding: 5px 20px 5px 20px;
+  font-size: 1em;
+  background: #0073e6;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer; 
+  /* margin-bottom: 5px; */
+}
+
+.video-item button:hover {
+  background: #005bb5;
+}
+
+
+
+@media (max-width: 480px) {
+ 
+  .videoItem video{
+    width: 320px;
+  }
+}
