--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -3,7 +3,16 @@
   display: flex; 
   flex-direction: column;
   align-items: center;
-  background-color:  #EEF7FF ;
+  justify-content: center;
+
+  background-color:  white ; 
+  height: 100%;
+}
+
+.downloadbuttoncontainer{
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
 }
 
 .container h1 {
@@ -11,7 +20,18 @@
   margin: 20px;
 }
 
-
+.downloadbutton{
+  display: block; 
+  align-items: center;
+  /* width: 50%; */
+  padding: 5px 20px 5px 20px;
+  font-size: 1em;
+  background: #0073e6;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer; 
+}
 
 .videoItem {  
   
